output/dev/expr-testfile-2.err
output prefix: llvm/dev/expr-testfile-2
llvmas: /usr/lib/llvm-3.8/bin/llvm-as
llc: /usr/lib/llvm-3.8/bin/llc
cc: gcc
codegen: /home/rafay/Desktop/decafCompiler/answer/decafcomp
stdlib: /home/rafay/Desktop/decafCompiler/answer/decaf-stdlib.c
generating llvm code:/home/rafay/Desktop/decafCompiler/answer/decafcomp ... ok
; ModuleID = 'Test'

declare void @print_int(i32)

define i32 @main() {
entry:
  %x = alloca i32
  %y = alloca i1
  %z = alloca i1
  store i32 958, i32* %x
  %x1 = load i32, i32* %x
  %x2 = load i32, i32* %x
  %negtmp = sub i32 0, %x2
  store i32 %negtmp, i32* %x
  store i1 true, i1* %y
  store i1 false, i1* %z
  br i1 true, label %ifright4, label %end3
  br i1 %phival, label %end, label %ifright

end:                                              ; preds = %ifright, %entry
  %phival7 = phi i1 [ %phival, %entry ], [ %z6, %ifright ]
  store i1 %phival7, i1* %y
  %x8 = load i32, i32* %x
  %x9 = load i32, i32* %x
  %negtmp10 = sub i32 0, %x9
  call void @print_int(i32 %negtmp10)
  ret i32 0

ifright:                                          ; preds = %entry
  %z6 = load i1, i1* %z
  br label %end

end3:                                             ; preds = %ifright4, %entry
  %phival = phi i1 [ true, %entry ], [ %y5, %ifright4 ]

ifright4:                                         ; preds = %entry
  %y5 = load i1, i1* %y
  br label %end3
}
assembling to bitcode:/usr/lib/llvm-3.8/bin/llvm-as "llvm/dev/expr-testfile-2.llvm" -o "llvm/dev/expr-testfile-2.llvm.bc" ... failed (1)
/usr/lib/llvm-3.8/bin/llvm-as: llvm/dev/expr-testfile-2.llvm:36:1: error: expected instruction opcode
ifright4:                                         ; preds = %entry
^
converting to native code:/usr/lib/llvm-3.8/bin/llc "llvm/dev/expr-testfile-2.llvm.bc" -o "llvm/dev/expr-testfile-2.llvm.s" ... ok
linking:gcc -o "llvm/dev/expr-testfile-2.llvm.exec" "llvm/dev/expr-testfile-2.llvm.s" "/home/rafay/Desktop/decafCompiler/answer/decaf-stdlib.c" ... ok
running:llvm/dev/expr-testfile-2.llvm.exec ... ok
